--- a/getHired.css
+++ b/getHired.css
@@ -1,7 +1,7 @@
 h1 { 
 color: blue; 
-font-family: 'helvetica'
-font-size: ; 25px 
+font-family: 'helvetica';
+font-size:  25px ; text-align: center;
  }
 
  body {
