--- a/getHired.css
+++ b/getHired.css
@@ -1,3 +1,6 @@
+
+<style>
+
 h1 { 
 color: blue; 
 font-family: 'helvetica';
@@ -10,3 +13,8 @@ p { text-align: center ; }
 
  background-color: black;
  }
+
+
+@media (max-width: 500px) {h1 { font-size: 50px; margin-top: 20px ; line-height: 40px;} }
+
+</style>
