--- a/getHired.css
+++ b/getHired.css
@@ -1,5 +1,5 @@
 
-<style>
+<html>
 
 h1 { 
 color: blue; 
@@ -17,4 +17,4 @@ p { text-align: center ; }
 
 @media (max-width: 500px) {h1 { font-size: 50px; margin-top: 20px ; line-height: 40px;} }
 
-</style>
+</html>
