--- a/getHired.css
+++ b/getHired.css
@@ -1,7 +1,8 @@
 h1 { 
 color: blue; 
 font-family: 'helvetica';
-font-size:  25px ; text-align: center;
+font-size:  25px ; 
+text-align: center;
  }
 
 p { text-align: center ; }
